# Lamina-review

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md
Lamina/include/: window.hpp
Lamina/include/GL/: GL_text.hpp  camera.hpp  colors.hpp  image_loader.hpp  opengl.hpp  stb_image.h  text.hpp  texture.hpp  vertex_array.hpp  window.hpp
Lamina/include/Math/: constants.hpp  matrix.hpp  timer.hpp  vec3.hpp  vector.hpp  vertex.hpp
Lamina/include/Primitives/: rectangle.hpp  triangle.hpp
Lamina/include/misc_graphics/: glyph.hpp  image.hpp  quad.hpp  text.hpp
Lamina/include/user_interface/: event.hpp
Lamina/src/: colors.cpp  window.cpp
Lamina/src/GL/: GL_text.cpp  camera.cpp  colors.cpp  opengl.cpp  text.cpp  texture.cpp  vertex_array.cpp  window.cpp
Lamina/src/Math/: matrix.cpp  vec3.cpp  vector.cpp  vertex.cpp
Lamina/src/Primitives/: rectangle.cpp  triangle.cpp
Lamina/src/misc_graphics/: glyph.cpp  image.cpp  quad.cpp  text.cpp
Lamina/src/user_interface/: event.cpp
Shaders/: VertexArrayFragmentShader.frag  VertexArrayVertexShader.vert  basicFragShader.frag  basicVertexShader.vert  quad_frag_shader.frag  quad_vert_shader.vert
dependencies/GLFW/lib/: glfw3.lib
dependencies/glad/: glad.h
fonts/roboto/roboto_bmp/: roboto_black_65.json
include/: colors.hpp  rectangle.hpp  vec2.hpp  window.hpp
include/Primitives/: triangle.hpp
src/: colors.cpp  glad.c  main.cpp  window.cpp
src/Primitives/: rectangle.cpp  triangle.cpp
tests/GLTests/: GLDrawTest.cpp
tests/matrix/src/: mat-test-main.cpp
tests/pong_demo/src/: main.cpp
tests/vertex/src/: ver-test-main.cpp
